--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,78 @@ statsmodels==0.8.0
 tornado==4.5.1
 traitlets==4.3.2
 wcwidth==0.1.7
+aiodns==1.1.1
+aiohttp==2.2.0
+async-timeout==1.2.1
+asyncpg==0.11.0
+beautifulsoup4==4.6.0
+cachetools==2.0.0
+cchardet==2.1.0
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
+cssselect==1.0.1
+cycler==0.10.0
+decorator==4.0.11
+docker==2.3.0
+docker-pycreds==0.2.1
+feedfinder2==0.0.4
+feedparser==5.2.1
+google-api-python-client==1.6.2
+google-auth==1.0.1
+google-auth-httplib2==0.0.2
+google-cloud-bigquery==0.24.0
+google-cloud-core==0.24.1
+googleapis-common-protos==1.5.2
+httplib2==0.10.3
+idna==2.5
+ipykernel==4.6.1
+ipython==6.1.0
+ipython-genutils==0.2.0
+jedi==0.10.0
+jieba3k==0.35.1
+jupyter-client==5.0.1
+jupyter-core==4.3.0
+lxml==3.8.0
+matplotlib==2.0.2
+multidict==3.0.0
+newspaper3k==0.2.2
+nltk==3.2.4
+numpy==1.13.0
+oauth2client==4.1.1
+olefile==0.44
+pandas==0.20.2
+pandas-gbq==0.1.6
+patsy==0.4.1
+pexpect==4.2.1
+pickleshare==0.7.3
+Pillow==4.1.1
+prompt-toolkit==1.0.14
+protobuf==3.3.0
+ptyprocess==0.5.1
+pyasn1==0.2.3
+pyasn1-modules==0.0.9
+pycares==2.1.1
+Pygments==2.2.0
+pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
+PyYAML==3.12
+pyzmq==16.0.2
+requests==2.18.1
+requests-file==1.4.2
+rsa==3.4.2
+scikit-learn==0.18.1
+scipy==0.19.0
+seaborn==0.7.1
+simplegeneric==0.8.1
+six==1.10.0
+statsmodels==0.8.0
+tldextract==2.1.0
+tornado==4.5.1
+traitlets==4.3.2
+uritemplate==3.0.0
+urllib3==1.21.1
+wcwidth==0.1.7
+websocket-client==0.43.0
+yarl==0.10.3
